[package]
name = "snof"
version = "0.1.0"
edition = "2024"
authors = ["mellowcoffee"]
repository = "https://github.com/mellowcoffee/snof"
homepage = "https://github.com/mellowcoffee/snof"
readme = "https://github.com/mellowcoffee/snof/readme.md"
license = "MIT"
license-file = "license"

[dependencies]
