[package]
name = "snof"
description = "Unique ID generator"
version = "0.2.0"
edition = "2024"
authors = ["mellowcoffee"]
repository = "https://github.com/mellowcoffee/snof"
homepage = "https://github.com/mellowcoffee/snof"
readme = "readme.md"
license = "MIT"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
